--- a/src/classes/WaveDataGeneratorController.cls
+++ b/src/classes/WaveDataGeneratorController.cls
@@ -8,6 +8,9 @@ public with sharing class WaveDataGeneratorController {
 	public String helpText { get; set; }
 	public Boolean validSchema { get; set; }
 	public String validationMessage { get; set; }
+	public Id selectedRoleId { get; set; }
+	public List<Id> selectedProfilesIds { get;set; }
+	public Boolean alsoRoleSubordinates { get; set; }
 
 	public WaveDataGeneratorController() {
 		this.showHelp = false;
@@ -15,9 +18,80 @@ public with sharing class WaveDataGeneratorController {
 		this.validSchema = false;
 	}
 
+	public List<SelectOption> getRoles() {
+
+        List<SelectOption> options = new List<SelectOption>();
+        List<UserRole> roles = new List<UserRole>();
+
+        if(!String.isBlank(this.waveApp)) {
+        
+        	List<String> roleNames = new List<String>();
+
+			if (this.waveApp == 'SalesWave') {
+				roleNames.addAll(new String[] {
+					'Central Sales',
+					'Director of Channel Sales',
+					'East Sales',
+					'RVP International Sales',
+					'VP of Sales',
+					'West Sales'
+				});	
+			} 
+			else if (this.waveApp == 'ServicesWave') {
+				roleNames.addAll(new String[] {
+					'Customer Service Agent',
+					'Customer Service Manager',
+					'VP of Customer Service'
+				});	
+			}
+
+			roles.addAll(RoleUtils.getUserRolesByName(roleNames));
+        }
+
+        options.add(new SelectOption('', 'None'));
+        for(UserRole role: roles) {
+        	options.add(new SelectOption(role.Id, role.Name));
+        }
+
+        return options;
+    }
+
+    public List<SelectOption> getProfiles() {
+
+        List<SelectOption> options = new List<SelectOption>();
+        List<Profile> profiles = new List<Profile>();
+
+        if(!String.isBlank(this.waveApp)) {
+        
+        	List<String> profileNames = new List<String>();
+
+			if (this.waveApp == 'SalesWave') {
+				profileNames.addAll(new String[] {
+					'Sales User',
+					'Sales Admin User'
+				});	
+			} 
+			else if (this.waveApp == 'ServicesWave') {
+				profileNames.addAll(new String[] {
+					'Service Cloud User',
+					'Service Cloud'
+				});	
+			}
+
+			profiles.addAll(ProfileUtils.getProfilesByName(profileNames));
+        }
+
+        for(Profile prof: profiles) {
+        	options.add(new SelectOption(prof.Id, prof.Name));
+        }
+
+        return options;
+    }
+
 	public List<SelectOption> getWaveApplications() {
 
         List<SelectOption> options = new List<SelectOption>();
+        options.add(new SelectOption('', 'None'));
         options.add(new SelectOption('ServicesWave', 'Services Wave'));
         options.add(new SelectOption('SalesWave', 'Sales Wave'));
 
@@ -27,17 +101,22 @@ public with sharing class WaveDataGeneratorController {
 	public List<SelectOption> getOrgObjects() {
 
         List<SelectOption> options = new List<SelectOption>();
-        Map<String, Schema.SObjectType> gd = Schema.getGlobalDescribe();
-        List<String> orderedObjectNames = new List<String>();
-    
-    	for(Schema.SObjectType sObjT : gd.values()) {
-        	orderedObjectNames.add(String.valueOf(sObjT));
-        }
-
-        orderedObjectNames.sort();
+        options.add(new SelectOption('', 'None'));
         
-        for(String sObjName : orderedObjectNames) {
-        	options.add(new SelectOption(sObjName, sObjName));
+        if(!String.isBlank(this.waveApp)) {
+        	// Default ones
+			options.add(new SelectOption('User', 'User'));
+
+			if (this.waveApp == 'SalesWave') {
+				options.add(new SelectOption('Account', 'Account'));
+				options.add(new SelectOption('Opportunity', 'Opportunity'));
+			} else if (this.waveApp == 'ServicesWave') {
+				options.add(new SelectOption('Case', 'Case'));
+				options.add(new SelectOption('CaseHistory', 'CaseHistory'));
+			}
+
+			options.add(new SelectOption('Task', 'Task'));
+			options.add(new SelectOption('Event', 'Event'));
         }
 
         return options;
@@ -51,6 +130,10 @@ public with sharing class WaveDataGeneratorController {
     	else {
     		this.helpText = 'Click for help';
     	}
+    }
+
+    public void updateWaveApp(){
+    	this.selectedObject = '';
     }
 
     public void validateSchema(){
