--- a/src/classes/SalesWaveScripted_test.cls
+++ b/src/classes/SalesWaveScripted_test.cls
@@ -67,17 +67,35 @@ public class SalesWaveScripted_test {
     private static void testOpportunityUsers() {
         SalesWaveQuotas.getOpportunitiesUserIds();
     }
+
+    @isTest private static void testWaveFoldersCallout(){
+
+        // HTTP Callout Mock
+        ManageQuotaDatasetsController controller = new ManageQuotaDatasetsController();
+        String mockData = '{"folders":[{"applicationStatus":"completedstatus","assetSharingUrl":"https://na30.salesforce.com/analytics/wave/application?assetId=00l36000001A8o8AAC&orgId=00D36000001H55A&loginHost=na30.salesforce.com&urlType=sharing","canBeSharedExternally":false,"createdBy":{"id":"00536000002AVSiAAO","name":"Dylan Thom","profilePhotoUrl":"https://c.na30.content.force.com/profilephoto/72936000000g24q/T"},"createdDate":"2016-09-09T19:33:34.000Z","icon":{"id":"00l36000001A8o8AAC","name":"6.png","url":"/analytics/wave/web/proto/images/app/icons/6.png"},"id":"00l36000001A8o8AAC","label":"SalesWaveLuc","lastAccessedDate":"2016-10-26T19:14:49.000Z","lastModifiedBy":{"id":"00536000002AVSiAAO","name":"Dylan Thom","profilePhotoUrl":"https://c.na30.content.force.com/profilephoto/72936000000g24q/T"},"lastModifiedDate":"2016-09-09T19:37:22.000Z","name":"SalesWaveLuc","permissions":{"manage":true,"modify":true,"view":true},"shares":[],"templateOptions":{},"templateSourceId":"sfdc_internal__Sales_Analytics","templateValues":{},"templateVersion":"2.0","type":"folder","url":"/services/data/v38.0/wave/folders/00l36000001A8o8AAC"}],"totalSize":1,"url":"/services/data/v38.0/wave/folders"}';
+        Map<String, String> responseHeaders = new Map<String, String>();
+        responseHeaders.put('Content-Type', 'application/json');
+        WaveFolderRestApiHttpCalloutMock mockObj = new WaveFolderRestApiHttpCalloutMock(200, '', mockData, responseHeaders);
+        Test.setMock(HttpCalloutMock.class, mockObj);
+        Test.startTest();
+        List<SelectOption> apps = controller.getSalesApplications();
+        Test.stopTest();
+
+        System.assert(apps != null);
+    }
     
     @isTest
     private static void testManageQuotaDatasetsController() {
-        Dataflow df = [SELECT Id FROM Dataflow WHERE DeveloperName = 'SalesWaveLuc'];
+
         ManageQuotaDatasetsController controller = new ManageQuotaDatasetsController();
+        Dataflow df = [SELECT Id FROM Dataflow WHERE DeveloperName = 'SalesWaveLuc'];
+
         controller.salesApp = 'SalesWaveLuc';
         controller.dataflowId = df.Id;
         controller.affectedCount = 0;
         controller.save();
-        controller.getDataflows();
-        controller.getSalesApplications();
+        controller.getDataflows();        
+
         controller.getRoles();
         controller.getProfiles();
         controller.handleAffected();
