--- a/src/classes/WaveDataset.cls
+++ b/src/classes/WaveDataset.cls
@@ -1,10 +1,8 @@
-public class WaveFolder {
-	public String applicationStatus;
+public with sharing class WaveDataset {
 	public Datetime createdDate;
 	public String id;
 	public String label;
 	public Datetime lastModifiedDate;
 	public String name;
-	public String templateSourceId;
 	public String url;
 }
