--- a/src/classes/WaveLensesResponse.cls
+++ b/src/classes/WaveLensesResponse.cls
@@ -1,5 +1,5 @@
-public class WaveFoldersResponse {
-	public WaveFolder[] folders;
+public with sharing class WaveLensesResponse {
+	public WaveLens[] lenses;
 	public String nextPageUrl;
 	public Integer totalSize;
 	public String url;
