Finished Wave Assets Utility code. Following, Test class.

--- a/src/classes/WaveAssetsUtility.cls
+++ b/src/classes/WaveAssetsUtility.cls
@@ -6,17 +6,19 @@ public with sharing class WaveAssetsUtility {
 
 	// Extracts all the assets and dump that data into a wave dataset 
     public static void extractAssetsAndBuildDataset(){
+
+        // WaveAsset general collection
+        List<WaveAsset> waveAssets = new List<WaveAsset>();
     	
     	// Extract assets data from REST API - JSON format
     	// Folders
-    	List<WaveFolder> waveFolders = new List<WaveFolder>();
     	String jsonFolders = WaveRestApiUtils.getWaveAssetsJSON('folders', null);
     	WaveFoldersResponse foldersResponse = (WaveFoldersResponse)JSON.deserialize(jsonFolders, WaveFoldersResponse.class);
     	
     	while(foldersResponse != null && foldersResponse.folders != null){
     		
     		for(WaveFolder folder : foldersResponse.folders){
-                waveFolders.add(folder);
+                waveAssets.add(folder);
             }
 
             if(foldersResponse.nextPageUrl != null){
@@ -29,14 +31,13 @@ public with sharing class WaveAssetsUtility {
     	}
 
     	// Datasets
-    	List<WaveDataset> waveDatasets = new List<WaveDataset>();
     	String jsonDatasets = WaveRestApiUtils.getWaveAssetsJSON('datasets', null);
     	WaveDatasetsResponse datasetsResponse = (WaveDatasetsResponse)JSON.deserialize(jsonDatasets, WaveDatasetsResponse.class);
     	
     	while(datasetsResponse != null && datasetsResponse.datasets != null){
     		
     		for(WaveDataset dataset : datasetsResponse.datasets){
-                waveDatasets.add(dataset);
+                waveAssets.add(dataset);
             }
 
             if(datasetsResponse.nextPageUrl != null){
@@ -49,14 +50,13 @@ public with sharing class WaveAssetsUtility {
     	}
 
     	// Lenses
-    	List<WaveLens> waveLenses = new List<WaveLens>();
     	String jsonLenses = WaveRestApiUtils.getWaveAssetsJSON('lenses', null);
     	WaveLensesResponse lensesResponse = (WaveLensesResponse)JSON.deserialize(jsonLenses, WaveLensesResponse.class);
     	
     	while(lensesResponse != null && lensesResponse.lenses != null){
     		
     		for(WaveLens lens : lensesResponse.lenses){
-                waveLenses.add(lens);
+                waveAssets.add(lens);
             }
 
             if(lensesResponse.nextPageUrl != null){
@@ -69,14 +69,13 @@ public with sharing class WaveAssetsUtility {
     	}
 
     	// Dashboards
-    	List<WaveDashboard> waveDashboards = new List<WaveDashboard>();
     	String jsonDashboards = WaveRestApiUtils.getWaveAssetsJSON('dashboards', null);
 		WaveDashboardsResponse dashboardsResponse = (WaveDashboardsResponse)JSON.deserialize(jsonDashboards, WaveDashboardsResponse.class);
     	
     	while(dashboardsResponse != null && dashboardsResponse.dashboards != null){
     		
     		for(WaveDashboard dashboard : dashboardsResponse.dashboards){
-                waveDashboards.add(dashboard);
+                waveAssets.add(dashboard);
             }
 
             if(dashboardsResponse.nextPageUrl != null){
@@ -88,6 +87,51 @@ public with sharing class WaveAssetsUtility {
             }
     	}
 
-    	// See SalesWaveQuotas to manage the upload
+    	// Generate header line of the CSV to upload
+        List<String> datasetLines = new String[]{'AssetType,Label,Name,CreatedDate,Id,LastModifiedDate,Url\n'};
+
+        // Folders
+        for(WaveAsset wAsset: waveAssets) {
+            datasetLines.add(String.format('{0},{1},{2},{3},{4},{5},{6}', new String[]{
+                wAsset.getAssetType(),
+                wAsset.label,
+                wAsset.name,
+                String.valueOf(wAsset.createdDate),
+                wAsset.id,
+                String.valueOf(wAsset.lastModifiedDate),
+                wAsset.url
+            }));
+        }
+
+        // Get the JSON from the Static Resource
+        StaticResource srJson = [SELECT Body FROM StaticResource WHERE Name = 'WaveAssetsSchemaJSON'];
+
+        // Configure the Upload of the new Wave Dataset
+        InsightsExternalData iedObj = new InsightsExternalData();
+        iedObj.Format = 'Csv';
+        iedObj.EdgemartAlias = 'WaveAssets';
+        //iedObj.EdgemartContainer = 'SharedApp';
+        iedObj.Operation = 'Overwrite';
+        iedObj.Action = 'None';
+        iedObj.MetadataJson = EncodingUtil.base64Decode(EncodingUtil.base64Encode(srJson.Body));
+
+        insert iedObj;
+
+        // Add the Data
+        InsightsExternalDataPart dataPart = new InsightsExternalDataPart();
+        dataPart.InsightsExternalDataId = iedObj.Id;
+        dataPart.PartNumber = 1;
+        Blob csvBlob = Blob.valueof(String.join(datasetLines, '\n'));
+        Integer size = csvBlob.size();
+        dataPart.dataFile = csvBlob;
+        dataPart.DataLength = size;
+        
+        insert dataPart;
+
+        System.debug(String.format('Method WaveAssetsUtility.extractAssetsAndBuildDataset() finished successfully. InsightsExternalData Id: {0}, InsightsExternalDataPart Id: {1}.', new String[]{iedObj.Id, dataPart.Id}));
+
+        // Final Step: Manage the Upload
+        iedObj.Action = 'Process';
+        update iedObj;
     }
 }
