--- a/src/classes/WaveDataset.cls
+++ b/src/classes/WaveDataset.cls
@@ -1,8 +1,5 @@
-public with sharing class WaveDataset {
-	public Datetime createdDate;
-	public String id;
-	public String label;
-	public Datetime lastModifiedDate;
-	public String name;
-	public String url;
+public class WaveDataset extends WaveAsset {
+	public override String getAssetType(){
+		return 'Dataset';
+	}
 }
