--- a/src/classes/WaveRestApiUtils.cls
+++ b/src/classes/WaveRestApiUtils.cls
@@ -6,7 +6,7 @@ public with sharing class WaveRestApiUtils {
 	public static String getWaveAssetsJSON(String waveAssets, String requestUrl){
         HttpRequest req = new HttpRequest();
         String salesforceHost = System.Url.getSalesforceBaseURL().toExternalForm();
-        String url = salesforceHost + (requestUrl != null ? requestUrl : '/services/data/v38.0/wave/' + waveAssets + 'pageSize=200');
+        String url = salesforceHost + (requestUrl != null ? requestUrl : '/services/data/v38.0/wave/' + waveAssets + '?pageSize=200');
         req.setEndpoint(url);
         req.setHeader('Authorization', 'OAuth ' + UserInfo.getSessionId());
         req.setMethod('GET');
